packages/beff-wasm/fixtures/errors/qualified-context/t1.ts
export { Param } from "./t2";
